--- a/src/app/pages/layout-main/layout-main.component.html
+++ b/src/app/pages/layout-main/layout-main.component.html
@@ -1,20 +1,23 @@
+<div class="col-12" style="background-color: black; height: 30px;">
+
+</div>
+
 <div class="container">
 
-  <app-nav-bar></app-nav-bar>
-  <div class="row">
-    <hr>
+  <app-nav-bar (change)="onNavBarCLickListener($event)"></app-nav-bar>
 
+  <div class="row" *ngIf="currentTabUrl=='Home'">
+    <app-home></app-home>
+  </div>
+
+  <div class="row" *ngIf="currentTabUrl=='Vender'">
+    <hr>
     <div class="col-md-3">
       <app-left-aside (eventResultAction)="onCategoriasSelected($event)"></app-left-aside>
     </div>
     <div class="col-md-9">
-      {{dataResult.listaProductosSelecteds|json}}
-
-      <app-main-content [listaProductos]="dataResult.listaProductosSelecteds"
-
-      ></app-main-content>
+      <app-main-content [listaProductos]="dataResult.listaProductosSelecteds"></app-main-content>
     </div>
-
-
   </div>
+
 </div>
