--- a/src/app/partials/main-content/main-content.component.html
+++ b/src/app/partials/main-content/main-content.component.html
@@ -1,1 +1,264 @@
-<p>main-content works!</p>
+<div class="col-12">
+
+  <div class="row">
+    <br>
+    <div class="row align-items-center">
+
+
+      <div class="col-4">
+        <button type="button" class="col-12 btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal"
+          data-bs-whatever="@mdo">REGISTRAR NUEVA VENTA
+        </button>
+      </div>
+
+      <div class="col-4">
+        <button type="button" class=" col-12 btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+          data-bs-whatever="@mdo">
+          ver Carrito
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4"
+            viewBox="0 0 16 16">
+            <path
+              d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+          </svg>
+          <span class="badge text-bg-secondary">{{listaProductosVenta.length}}</span>
+        </button>
+      </div>
+
+      <br>
+      <br>
+      <br>
+      <br>
+      <hr class="col-12">
+    </div>
+
+    <div class="container">
+      <h2 class="">
+        Lista de Productos
+        <button type="button" (click)="onClickListenerButtonNuevoProducto('b001')" class="btn btn-info">Nuevo +
+        </button>
+
+        <div class="btn-group float-end" role="group" aria-label="Basic outlined example">
+
+          <button (click)="onClickListenerButton()" [class.active]="activeBAV001" type="button"
+            class="btn btn-outline-primary ">cuadricula
+          </button>
+          <button [class.active]="!activeBAV001" (click)="onClickListenerButton()" type="button"
+            class="btn btn-outline-primary">Lista
+          </button>
+        </div>
+
+
+      </h2>
+
+      <div class="row">
+
+        <div class="col-md-3" *ngFor="let cardItem of listaProductos ">
+          <app-card-base (eventResultAction)="onClickListenerAgregarProductoButton($event.productoSeleccionado)"
+            *ngIf="activeBAV001" [ItemProducto]="cardItem"></app-card-base>
+        </div>
+      </div>
+
+
+
+      <div *ngIf="!activeBAV001">
+        <ul class="list-group">
+          <li *ngFor="let cardItem of listaProductos "
+            class="list-group-item d-flex justify-content-between align-items-center">
+
+            <div class="row col-12">
+              <div class="col-6">
+                <span style="font-weight: bolder;">{{cardItem.nombre}}:</span>
+                <br>{{cardItem.descripcion}}
+              </div>
+              <div class="col-2"><span class="stock-text">disponible:{{cardItem.stock}}</span></div>
+              <div class="col-3">
+                <button (click)="onClickListenerAgregarProductoButton(cardItem)" type="button"
+                  class="btn btn-success">Agregar al carrito
+                </button>
+              </div>
+              <div class="col-1"><span class="badge bg-primary rounded-pill">S/ {{cardItem.precio_venta}}</span></div>
+
+            </div>
+
+
+          </li>
+
+        </ul>
+      </div>
+
+
+      <div *ngIf="listaProductos.length==0">
+        <hr>
+        <p>No se encontraron resultados</p>
+      </div>
+    </div>
+
+
+  </div>
+
+</div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">VENTAS </h1>
+
+
+        <button (click)="onClickNuevaVenta()" type="button" class="btn btn-primary mx-5">Nueva Venta +
+        </button>
+
+        <div class="col-md-6 col-sm-12">
+          <h6>VENTAS PENDIENTES</h6>
+          <select #sel_VentaPendiente (change)="onClickListenerSeleccionarVentaPendiente($event)"
+            [(ngModel)]="ventaIdPendienteSelected" class="form-select" aria-label="Default select example">
+
+            <option value="-1">
+              -- SELECCIONE VENTA A PAGAR --
+            </option>
+            <option 
+           
+            [value]="itemVenta.id_venta" *ngFor="let itemVenta of ListaVentasPendientes">
+              @{{itemVenta.cliente + "__"+itemVenta.alias_venta+": "+itemVenta.fecha_venta}}
+            </option>
+
+          </select>
+        </div>
+
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        <div class="row" style="position: relative">
+
+          <div class="col-sm-5" *ngIf="tipoFormulario!=1" style="border-right: 2px solid blue;">
+            <div class="row">
+              <div class="col-sm-7">
+                <select #cliente class="form-select" aria-label="Default select example">
+                  <option selected>Open this select menu</option>
+                  <option [value]="cliente['id_cliente']" *ngFor="let cliente of listaClientes ;let rowNumb=index  ">
+                    {{cliente['apellido_pat']+" "+cliente['apellido_mat']+", "+cliente['nombres']}}
+                  </option>
+
+                </select>
+              </div>
+              <div class="col-sm-5">
+                <button (click)="setClienteSelectedVenta(cliente.value)" class="btn btn-success col-12">
+                  Seleccionar
+                  Cliente</button>
+              </div>
+
+            </div>
+
+
+            <div class="row">
+
+              <p *ngIf="ClienteData['apellido_pat']"> CLIENTE: {{ClienteData['apellido_pat']+"
+                "+ClienteData['apellido_mat']+", "+ClienteData['nombres']}}
+              </p>
+              <p>DNI: {{ClienteData['DNI']}} </p>
+              <p>TELEFONO: {{ClienteData['telefono']}} </p>
+              <!-- <p>ESTADO: {{ClienteData['DNI']}} </p> -->
+              <p>MAXIMO CREDITO: {{ClienteData['max_credito']}} </p>
+              <p>FECHA REGISTRO: {{ClienteData['fecha_registro']|date}} </p>
+            </div>
+
+
+          </div>
+          <div class="col-sm-7">
+            <div class="mb-3 col-12">
+              <label class="form-label">Nombre Venta (opcional)</label>
+              <input [(ngModel)]="dataBusquedaParams.aliasVenta" type="text" class="form-control" placeholder="">
+            </div>
+
+            <div class=" divTable greyGridTable">
+              <div class="divTableHeading">
+                <div class="divTableRow">
+                  <div class="divTableHead">#</div>
+                  <div class="divTableHead">Nombre</div>
+                  <div class="divTableHead">Precio UND.</div>
+                  <div class="divTableHead">Cantidad</div>
+                  <div class="divTableHead">Sub total</div>
+                  <div class="divTableHead"></div>
+                </div>
+              </div>
+              <div class="divTableBody">
+                <div class="divTableRow" *ngFor="let cardItem of listaProductosVenta ;let rowNumb=index  ">
+                  <div class="divTableCell">{{(rowNumb + 1)}}</div>
+                  <div class="divTableCell">{{cardItem.nombre}} </div>
+                  <div class="divTableCell">S/{{cardItem.precio_venta}} x {{obtenerTipoUnidad(cardItem)}}</div>
+                  <div class="divTableCell">
+
+
+                    <div *ngIf="tipoFormulario==1">
+                      {{cardItem['cantidad_producto']}}
+                    </div>
+                    <div *ngIf="tipoFormulario!=1">
+
+
+                      <div class="mb-3">
+                        <input style="width: 70px; font-size: 12px;text-align: center"
+                          [(ngModel)]="cardItem['cantidad_producto']" type="number" class="form-control" placeholder="">
+                      </div>
+
+                    </div>
+
+                  </div>
+                  <div class="divTableCell">{{obtenerPrecioSubTotal(cardItem)}}</div>
+                  <div class="divTableCell">
+                    <button type="button" class="btn btn-warning  " data-bs-toggle="tooltip" data-bs-placement="top"
+                      data-bs-custom-class="custom-tooltip"
+                      data-bs-title="This top tooltip is themed via CSS variables.">
+                      X
+                    </button>
+                  </div>
+
+                </div>
+              </div>
+              <div class="divTableFoot tableFootStyle">
+                <div class="divTableRow">
+                  <div class="divTableCell"></div>
+                  <div class="divTableCell">TOTAL :</div>
+                  <div class="divTableCell"></div>
+                  <div class="divTableCell"></div>
+                  <div class="divTableCell">
+                    <!--<div *ngIf="tipoFormulario==1">-->
+
+                    <!--                    </div>-->
+                    <div>
+                      S/ {{obtenerTotal()}}
+                    </div>
+
+                  </div>
+                  <div class="divTableCell"></div>
+
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+
+          <div style="margin-top: 50px">
+
+            <div>
+
+            </div>
+            <button (click)="onGuardarVentaClickListener()" class="col-sm-2 btn btn-primary "
+              style="position: absolute; right: 0;bottom: 0" type="button">
+              GUARDAR VENTA
+            </button>
+          </div>
+
+
+        </div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CERRAR</button>
+      </div>
+    </div>
+  </div>
+</div>
