--- a/src/app/partials/nav-bar/nav-bar.component.html
+++ b/src/app/partials/nav-bar/nav-bar.component.html
@@ -1,9 +1,44 @@
 <div class="col-12">
 
+  <div class="row">
+    <div class="col-sm-12 col-md-4 p-3">
+      <div>
+        <div><i class="bi bi-telephone-fill"></i> +51 974626298</div>
+        <div><i class="bi bi-envelope-fill"></i> {{ "info.mitienda@gmail.com"}} </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-4 p-3">
+      <div class="justify-content-center">
+        <div class="text-center" style="color: goldenrod; font-size: 25px; font-weight: 900;">
+          MI TIENDA
+        </div>
+        <div class="text-center" style="font-size: 25px; font-weight: 500; letter-spacing: 10px;">
+          Eslogan
+        </div>
+      </div>
 
-  <nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;">
-    <!-- Navbar content -->
-    <div class="container-fluid">
+    </div>
+    <div class="col-sm-12 col-md-4 p-3">
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="buscar..." aria-label="Search">
+        <button class="btn " type="submit"><i class="bi bi-cart"></i></button>
+      </form>
+    </div>
+    <hr>
+    <div class="d-flex ">
+      <div class="" style="margin-bottom: 16px !important; padding-right: 16px; cursor: pointer;"
+        *ngFor="let item of listaMenus">
+        <a style="text-decoration: none;" [class.active]="item.setActive"
+          (click)="onNavbarClickListener(item.name)">{{item.name}}
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- <nav class="navbar navbar-expand-lg  navbar-light" style="background-color: #e3f2fd;"> -->
+  <!-- Navbar content -->
+  <!-- <div class="container-fluid">
       <a class="navbar-brand" href="#">MiTiendaOnline</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,37 +48,36 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item" *ngFor="let item of listaMenus">
-            <p class="nav-link"
-            [class.active]="item.setActive"
-            (click)="onNavbarClickListener(item.name)">{{item.name}}</p>
-          </li>
-
-        
+            <p class="nav-link" [class.active]="item.setActive" (click)="onNavbarClickListener(item.name)">{{item.name}}
+            </p>
+          </li> -->
 
 
-          <!-- <li class="nav-item dropdown"> -->
-          <!--            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"-->
-          <!--               aria-expanded="false">-->
-          <!--              Dropdown-->
-          <!--            </a>-->
-          <!--            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-          <!--              <li><a class="dropdown-item" href="#">Action</a></li>-->
-          <!--              <li><a class="dropdown-item" href="#">Another action</a></li>-->
-          <!--              <li>-->
-          <!--                <hr class="dropdown-divider">-->
-          <!--              </li>-->
-          <!--              <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-          <!--            </ul>-->
-          <!--          </li>-->
-          <!--          <li class="nav-item">-->
-          <!--            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-          <!--          </li>-->
-        </ul>
+
+
+  <!-- <li class="nav-item dropdown"> -->
+  <!--            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"-->
+  <!--               aria-expanded="false">-->
+  <!--              Dropdown-->
+  <!--            </a>-->
+  <!--            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+  <!--              <li><a class="dropdown-item" href="#">Action</a></li>-->
+  <!--              <li><a class="dropdown-item" href="#">Another action</a></li>-->
+  <!--              <li>-->
+  <!--                <hr class="dropdown-divider">-->
+  <!--              </li>-->
+  <!--              <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+  <!--            </ul>-->
+  <!--          </li>-->
+  <!--          <li class="nav-item">-->
+  <!--            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+  <!--          </li>-->
+  <!-- </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="buscar..." aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
 </div>
