--- a/src/app/pages/Home/Home.component.html
+++ b/src/app/pages/Home/Home.component.html
@@ -1,3 +1,17 @@
-<p>
-  Home works!
-</p>
+<div style="background: rgb(255,255,255);
+            background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(245,245,245,1) 63%, rgba(255,244,222,1) 100%);
+            height: 60vh; 
+            position: relative;
+            
+            margin-top: 10px;">
+
+  <div style="position: absolute; top: 60%; left: 2%;">
+    <div class="d-flex">
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-link"
+        style="text-decoration: none !important; cursor: pointer !important  ;">Link</button>
+    </div>
+  </div>
+
+
+</div>
