--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.zshadow-1 {
+    box-shadow: -1px 10px 16px -8px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -1px 10px 16px -8px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 10px 16px -8px rgba(0, 0, 0, 0.75);
+}
+
+.zshadow-2 {
+    box-shadow: -1px 10px 16px 5px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: -1px 10px 16px 5px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: -1px 10px 16px 5px rgba(0, 0, 0, 0.75);
+}
