--- a/src/app/pages/StoreV2/store-page-main/store-page-main.component.css
+++ b/src/app/pages/StoreV2/store-page-main/store-page-main.component.css
@@ -26,7 +26,7 @@ section {
 article {
   background-color: #fff;
   border: 1px solid #ddd;
-  margin: 10px;
+  /* margin: 10px; */
   padding: 20px;
   text-align: center;
 }
@@ -37,3 +37,13 @@ footer {
   padding: 10px;
   text-align: center;
 }
+
+.main-cards {
+  height: 70vh !important;
+  overflow: auto !important;
+}
+
+.list-group-item {
+  padding: 0 !important;
+}
+
