--- a/src/app/pages/StoreV2/partials/iem-acordion/iem-acordion.component.html
+++ b/src/app/pages/StoreV2/partials/iem-acordion/iem-acordion.component.html
@@ -1,8 +1,4 @@
 <div class="accordion accordion-flush col-lg-12" id="accordionFlushExample">
-
-
-
-  <h5>Lista Categorias</h5>
   <div class="row justify-content-center" *ngIf="isLoadingData">
     <div class="spinner-border" role="status">
     </div>
@@ -11,34 +7,51 @@
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
         [attr.data-bs-target]="'#flush-collapse_'+rowcount" aria-expanded="false" aria-controls="flush-collapseOne">
-        {{item.titleName}}__
-        {{item.countChilds}}
+        {{ item.titleName | uppercase }}
+        <span class="badge text-bg-secondary frig" style="right: 50px;">{{item.countChilds}}</span>
       </button>
     </h2>
-
-
-
     <div [id]="'flush-collapse_'+rowcount" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body ">
+      <div class="accordion-body position-relative ">
 
         <!-- INICIO ACCIONES POR CATEGORIA PADRE-->
-        <div class="frig ">
-          <div class="btn-group">
-            <button href="#" class="btn btn-outline-secondary " data-bs-toggle="tooltip" data-bs-placement="bottom"
-              data-bs-title="Tooltip on top" aria-current="page">a</button>
-            <button href="#" class="btn btn-outline-secondary">b</button>
-            <button href="#" class="btn btn-outline-secondary">c</button>
-          </div>
-        </div>
+        <!-- <div class="">
+          <span class="badge text-bg-light"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+              <path
+                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+              <path fill-rule="evenodd"
+                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+            </svg></span>
+          <span class="badge text-bg-light">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-x-circle-fill text-danger" viewBox="0 0 16 16">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z" />
+            </svg>
+
+          </span>
+          <span class="badge text-bg-light">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-all"
+              viewBox="0 0 16 16">
+              <path
+                d="M12.354 4.354a.5.5 0 0 0-.708-.708L5 10.293 1.854 7.146a.5.5 0 1 0-.708.708l3.5 3.5a.5.5 0 0 0 .708 0zm-4.208 7-.896-.897.707-.707.543.543 6.646-6.647a.5.5 0 0 1 .708.708l-7 7a.5.5 0 0 1-.708 0" />
+              <path d="m5.354 7.146.896.897-.707.707-.897-.896a.5.5 0 1 1 .708-.708" />
+            </svg>
+          </span>
+
+        </div> -->
         <!-- FIN ACCIONES POR CATEGORIA PADRE-->
 
         <!-- INICIO CONTENT POR CATEGORIA PADRE-->
         <code>{{item.itemDescription==undefined?"--":item.itemDescription}}</code>
         <hr>
+
+        <!-- {{item|json}} -->
         <ul class="list-group list-group-flush">
 
 
-          <li *ngFor="let itemHijo of item.childListM;let RowContHijos=index"
+          <li *ngFor="let itemHijo of item.childList;let RowContHijos=index"
             class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
               <input c [(ngModel)]="itemHijo['isChecked']" (change)="onChangeCategoriaSelectedListener(itemHijo)"
@@ -54,7 +67,8 @@
           </li>
         </ul>
 
-        <button *ngIf="selectedFilterList.length>0" type="button" class="btn btn-success frig-i">Filtrar
+        <button (click)="onClickFiltrarSeleccion(item.childList)" *ngIf="selectedFilterList.length>0" type="button"
+          class="btn btn-success frig-i">Filtrar
           Seleccion</button>
         <br>
         <!-- FIN CONTENT POR CATEGORIA PADRE-->
